Warehouse Name Truncate Issue S20-1053 Fixed

--- a/src/Component/Pages/ManageWarehouse/ManageWarehouse.css
+++ b/src/Component/Pages/ManageWarehouse/ManageWarehouse.css
@@ -100,9 +100,6 @@
     max-width: 10rem;
     overflow: hidden;
     text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
 }
 
 .rto-details .warehouse-heading {
